--- a/package.json
+++ b/package.json
@@ -7,13 +7,10 @@
     "start": "vite",
     "dev": "vite",
     "build": "vite build",
-    "serve": "vite preview",
-    "predeploy": "pnpm run build",
-    "deploy": "gh-pages -d dist"
+    "serve": "vite preview"
   },
   "license": "MIT",
   "devDependencies": {
-    "gh-pages": "^4.0.0",
     "typescript": "^4.8.2",
     "vite": "^3.0.9",
     "vite-plugin-solid": "^2.3.0"
